# dj-arbuzzz-backend

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DOCKER.md  LICENSE  Makefile  QUICK_DEPLOY.md  README.md  debug-websocket.sh  deploy-ws-fix.sh  docker-compose.yml
.github/: CI_CD_GUIDE.md  README.md  dependabot.yml  pull_request_template.md  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
client/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
client/app/components/: Header.vue  PlayerWidget.vue
client/app/layouts/: default.vue
client/app/pages/: index.vue
migrations/2026-02-12-144851-0000_tracks/: up.sql
nginx/: README.md  nginx.conf  nginx.http-only.conf  nginx.prod.conf
nginx/ssl/: .gitkeep
scripts/: generate-ssl.sh  init-letsencrypt.sh
server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrations  LICENSE  README.md
server/migrations/2026-01-07-030832-0000_create_user/: up.sql
server/migrations/2026-01-08-170123-0000_user_role_not_null/: down.sql
server/migrations/2026-02-12-144851-0000_tracks/: down.sql
server/src/: lib.rs  main.rs
server/src/api/: routes.rs
server/src/config/: database.rs  mod.rs  redis.rs  secret.rs  smtp.rs  songs.rs
server/src/error/: app_error.rs
server/src/infrastucture/: mod.rs
server/src/service/: dfpwm.rs  radio_service.rs  smtp_service.rs  token_service.rs  track_service.rs
src/: schema.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: mod.rs  radio.rs  sign_up.rs
src/dto/response/: mod.rs  track.rs
src/error/: app_error.rs
src/infrastucture/cache/: keys.rs
src/infrastucture/database/: models.rs
src/infrastucture/repositories/: mod.rs  track_repository.rs  user_track_repository.rs  users_repository.rs
src/service/: mod.rs  otp_service.rs  player_service.rs  playlist_service.rs  radio_service.rs  track_service.rs
src/service/auth/: auth_service.rs  sign_up_service.rs
src/service/track/: track_service.rs
(+22 files in other folders)
