[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
diesel = { version = "2.3.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
anyhow = "1.0"
thiserror = "1.0"
tower-cookies = "0.11.0"
mail-send = "0.5.2"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
diesel-async = { version = "0.7.0", features = ["postgres", "deadpool"] }
deadpool = "0.12.3"
utoipa-axum = "0.2.0"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_with = "3.16.1"
validator = {version = "0.20.0", features = ["derive"]}
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
axum-macros = "0.5.0"
chrono = { version = "0.4.43", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
